Bug 371788 - export to tiff crash krita everytime
Summary: export to tiff crash krita everytime
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Mageia RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Frederik Gladhorn
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-10-28 16:30 UTC by animtim
Modified: 2016-10-28 17:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2016-10-28 16:30:40 UTC
Application: krita (3.0.91 (git 2cf8d21))

Qt Version: 5.6.1
Frameworks Version: 5.27.0
Operating System: Linux 4.8.3-desktop-1.mga6 x86_64
Distribution: "Mageia 6"

-- Information about the crash:
- What I was doing when the application crashed:

I was exporting a CMYK file to tiff
(using zip compression; flatten image and include icc activated)

First I had this bug on my workstation, on dmitry's branch.
I reproduced it on my laptop with a recent build from master.

The crash can be reproduced every time.

-- Backtrace:
Application: Krita (krita), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f225c3ae840 (LWP 14782))]

Thread 6 (Thread 0x7f220f137700 (LWP 14794)):
#0  0x00007f2251aadc4f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f2255b8cdbb in QWaitCondition::wait(QMutex*, unsigned long) () at /lib64/libQt5Core.so.5
#2  0x00007f22568d8c82 in QFileInfoGatherer::run() () at /lib64/libQt5Widgets.so.5
#3  0x00007f2255b8bfb9 in QThreadPrivate::start(void*) () at /lib64/libQt5Core.so.5
#4  0x00007f2251aa866d in start_thread () at /lib64/libpthread.so.0
#5  0x00007f2254f8eded in clone () at /lib64/libc.so.6

Thread 5 (Thread 0x7f220f938700 (LWP 14792)):
#0  0x00007f2251aadc4f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f2255b8cdbb in QWaitCondition::wait(QMutex*, unsigned long) () at /lib64/libQt5Core.so.5
#2  0x00007f2255b863a6 in QSemaphore::tryAcquire(int, int) () at /lib64/libQt5Core.so.5
#3  0x00007f225b0369a3 in KisTileDataSwapper::waitForWork() (this=<optimized out>) at /home/timo/kde4/src/krita/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:86
#4  0x00007f225b036b6a in KisTileDataSwapper::run() (this=0x7f225b4f3c40 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+64>) at /home/timo/kde4/src/krita/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:92
#5  0x00007f2255b8bfb9 in QThreadPrivate::start(void*) () at /lib64/libQt5Core.so.5
#6  0x00007f2251aa866d in start_thread () at /lib64/libpthread.so.0
#7  0x00007f2254f8eded in clone () at /lib64/libc.so.6

Thread 4 (Thread 0x7f2210139700 (LWP 14791)):
#0  0x00007f2251aadc4f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f2255b8cdbb in QWaitCondition::wait(QMutex*, unsigned long) () at /lib64/libQt5Core.so.5
#2  0x00007f2255b8610b in QSemaphore::acquire(int) () at /lib64/libQt5Core.so.5
#3  0x00007f225b01da5e in KisTileDataPooler::waitForWork() (this=0x7f225b4f3c00 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder>) at /home/timo/kde4/src/krita/libs/image/tiles3/kis_tile_data_pooler.cc:165
#4  0x00007f225b01e15a in KisTileDataPooler::run() (this=0x7f225b4f3c00 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder>) at /home/timo/kde4/src/krita/libs/image/tiles3/kis_tile_data_pooler.cc:187
#5  0x00007f2255b8bfb9 in QThreadPrivate::start(void*) () at /lib64/libQt5Core.so.5
#6  0x00007f2251aa866d in start_thread () at /lib64/libpthread.so.0
#7  0x00007f2254f8eded in clone () at /lib64/libc.so.6

Thread 3 (Thread 0x7f2235711700 (LWP 14784)):
#0  0x00007f22508875e9 in g_mutex_lock () at /lib64/libglib-2.0.so.0
#1  0x00007f2250842b48 in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#2  0x00007f2255da23ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Core.so.5
#3  0x00007f2255d4dc9a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Core.so.5
#4  0x00007f2255b8737c in QThread::exec() () at /lib64/libQt5Core.so.5
#5  0x00007f225c3dc615 in QDBusConnectionManager::run() () at /lib64/libQt5DBus.so.5
#6  0x00007f2255b8bfb9 in QThreadPrivate::start(void*) () at /lib64/libQt5Core.so.5
#7  0x00007f2251aa866d in start_thread () at /lib64/libpthread.so.0
#8  0x00007f2254f8eded in clone () at /lib64/libc.so.6

Thread 2 (Thread 0x7f2241dd5700 (LWP 14783)):
#0  0x00007f2254f82f9d in poll () at /lib64/libc.so.6
#1  0x00007f22538a2902 in _xcb_conn_wait () at /lib64/libxcb.so.1
#2  0x00007f22538a4657 in xcb_wait_for_event () at /lib64/libxcb.so.1
#3  0x00007f2243ef52b9 in QXcbEventReader::run() () at /lib64/libQt5XcbQpa.so.5
#4  0x00007f2255b8bfb9 in QThreadPrivate::start(void*) () at /lib64/libQt5Core.so.5
#5  0x00007f2251aa866d in start_thread () at /lib64/libpthread.so.0
#6  0x00007f2254f8eded in clone () at /lib64/libc.so.6

Thread 1 (Thread 0x7f225c3ae840 (LWP 14782)):
[KCrash Handler]
#6  0x00007f2254f17d4e in free () at /lib64/libc.so.6
#7  0x00007f2205211b18 in KisTIFFOptionsWidget::~KisTIFFOptionsWidget() (this=0x113d1060, __in_chrg=<optimized out>) at /home/timo/kde4/src/krita/plugins/impex/tiff/kis_dlg_options_tiff.cpp:51
#8  0x00007f2205211b18 in KisTIFFOptionsWidget::~KisTIFFOptionsWidget() (this=0x113d1060, __in_chrg=<optimized out>) at /home/timo/kde4/src/krita/plugins/impex/tiff/kis_dlg_options_tiff.cpp:52
#9  0x00007f2255d795f3 in QObjectPrivate::deleteChildren() () at /lib64/libQt5Core.so.5
#10 0x00007f22566f3b14 in QWidget::~QWidget() () at /lib64/libQt5Widgets.so.5
#11 0x00007f220520ff87 in KisTIFFExport::convert(QByteArray const&, QByteArray const&, KisPinnedSharedPtr<KisPropertiesConfiguration>) (this=<optimized out>, from=..., to=..., configuration=...) at /home/timo/kde4/src/krita/plugins/impex/tiff/kis_tiff_export.cc:68
#12 0x00007f225bea2a6d in CalligraFilter::ChainLink::invokeFilter() (this=0x113b01b0) at /home/timo/kde4/src/krita/libs/ui/KisFilterChainLink.cpp:81
#13 0x00007f225bea1bad in KisFilterChain::invokeChain() (this=this@entry=0x8a86260) at /home/timo/kde4/src/krita/libs/ui/KisFilterChain.cpp:92
#14 0x00007f225bea8e85 in KisImportExportManager::exportDocument(QString const&, QByteArray&, KisPinnedSharedPtr<KisPropertiesConfiguration>) (this=0x89eedb0, location=..., mimeType=..., exportConfiguration=...) at /home/timo/kde4/src/krita/libs/ui/KisImportExportManager.cpp:219
#15 0x00007f225be94900 in KisDocument::saveFile(KisPinnedSharedPtr<KisPropertiesConfiguration>) (this=0x870b960, exportConfiguration=...) at /home/timo/kde4/src/krita/libs/ui/KisDocument.cpp:698
#16 0x00007f225be95694 in KisDocument::save(KisPinnedSharedPtr<KisPropertiesConfiguration>) (this=this@entry=0x870b960, exportConfiguration=...) at /home/timo/kde4/src/krita/libs/ui/KisDocument.cpp:2191
#17 0x00007f225be95a1c in KisDocument::saveAs(QUrl const&, KisPinnedSharedPtr<KisPropertiesConfiguration>) (this=this@entry=0x870b960, kurl=..., exportConfiguration=...) at /home/timo/kde4/src/krita/libs/ui/KisDocument.cpp:2167
#18 0x00007f225be95bda in KisDocument::exportDocument(QUrl const&, KisPinnedSharedPtr<KisPropertiesConfiguration>) (this=this@entry=0x870b960, _url=..., exportConfiguration=...) at /home/timo/kde4/src/krita/libs/ui/KisDocument.cpp:631
#19 0x00007f225beb7775 in KisMainWindow::saveDocument(KisDocument*, bool, bool, int) (this=this@entry=0x7005cb0, document=0x870b960, saveas=<optimized out>, saveas@entry=true, silent=silent@entry=false, specialOutputFlag=specialOutputFlag@entry=0) at /home/timo/kde4/src/krita/libs/ui/KisMainWindow.cpp:1069
#20 0x00007f225beb7ea4 in KisMainWindow::slotFileSaveAs() (this=0x7005cb0) at /home/timo/kde4/src/krita/libs/ui/KisMainWindow.cpp:1423
#21 0x00007f225beb7f8a in KisMainWindow::slotExportFile() (this=0x7005cb0) at /home/timo/kde4/src/krita/libs/ui/KisMainWindow.cpp:1870
#22 0x00007f225bebd01f in KisMainWindow::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=0x7005cb0, _c=<optimized out>, _id=<optimized out>, _a=0x7ffdd29bfc80) at /home/timo/kde4/build/krita/libs/ui/moc_KisMainWindow.cpp:358
#23 0x00007f2255d7b069 in QMetaObject::activate(QObject*, int, int, void**) () at /lib64/libQt5Core.so.5
#24 0x00007f22566acbb2 in QAction::triggered(bool) () at /lib64/libQt5Widgets.so.5
#25 0x00007f22566af490 in QAction::activate(QAction::ActionEvent) () at /lib64/libQt5Widgets.so.5
#26 0x00007f225682abe2 in QMenuPrivate::activateCausedStack(QVector<QPointer<QWidget> > const&, QAction*, QAction::ActionEvent, bool) () at /lib64/libQt5Widgets.so.5
#27 0x00007f22568309e6 in QMenuPrivate::activateAction(QAction*, QAction::ActionEvent, bool) () at /lib64/libQt5Widgets.so.5
#28 0x00007f2256834ac9 in QMenu::mouseReleaseEvent(QMouseEvent*) () at /lib64/libQt5Widgets.so.5
#29 0x00007f22566f7cd8 in QWidget::event(QEvent*) () at /lib64/libQt5Widgets.so.5
#30 0x00007f225683554b in QMenu::event(QEvent*) () at /lib64/libQt5Widgets.so.5
#31 0x00007f22566b590c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib64/libQt5Widgets.so.5
#32 0x00007f22566bb2ee in QApplication::notify(QObject*, QEvent*) () at /lib64/libQt5Widgets.so.5
#33 0x00007f225be81a57 in KisApplication::notify(QObject*, QEvent*) (this=<optimized out>, receiver=0x8865e20, event=0x7ffdd29c02b0) at /home/timo/kde4/src/krita/libs/ui/KisApplication.cpp:511
#34 0x00007f2255d4fe18 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib64/libQt5Core.so.5
#35 0x00007f22566ba055 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () at /lib64/libQt5Widgets.so.5
#36 0x00007f2256711f47 in QWidgetWindow::handleMouseEvent(QMouseEvent*) () at /lib64/libQt5Widgets.so.5
#37 0x00007f225671416b in QWidgetWindow::event(QEvent*) () at /lib64/libQt5Widgets.so.5
#38 0x00007f22566b590c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib64/libQt5Widgets.so.5
#39 0x00007f22566baa76 in QApplication::notify(QObject*, QEvent*) () at /lib64/libQt5Widgets.so.5
#40 0x00007f225be81a57 in KisApplication::notify(QObject*, QEvent*) (this=<optimized out>, receiver=0x8646500, event=0x7ffdd29c0710) at /home/timo/kde4/src/krita/libs/ui/KisApplication.cpp:511
#41 0x00007f2255d4fe18 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib64/libQt5Core.so.5
#42 0x00007f2256099ec0 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () at /lib64/libQt5Gui.so.5
#43 0x00007f225609b915 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () at /lib64/libQt5Gui.so.5
#44 0x00007f225607ad2b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Gui.so.5
#45 0x00007f2243f27db0 in userEventSourceDispatch(_GSource*, int (*)(void*), void*) () at /lib64/libQt5XcbQpa.so.5
#46 0x00007f2250842887 in g_main_context_dispatch () at /lib64/libglib-2.0.so.0
#47 0x00007f2250842ab8 in g_main_context_iterate.isra () at /lib64/libglib-2.0.so.0
#48 0x00007f2250842b5c in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#49 0x00007f2255da2386 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Core.so.5
#50 0x00007f2255d4dc9a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Core.so.5
#51 0x00007f2255d56001 in QCoreApplication::exec() () at /lib64/libQt5Core.so.5
#52 0x0000000000404fcd in main(int, char**) (argc=1, argv=<optimized out>) at /home/timo/kde4/src/krita/krita/main.cc:261

Reported using DrKonqi
Comment 1 Frederik Gladhorn 2016-10-28 17:18:08 UTC
Git commit 8fcb0dcab85b1fe3a2827ff74b50ad67d399caea by Frederik Gladhorn.
Committed on 28/10/2016 at 17:06.
Pushed by gladhorn into branch 'master'.

Do not crash after showing KisTIFFOptionsWidget

Neither of the two private variables was used or initiated, thus the
delete was always going to be a segfault.

M  +0    -1    plugins/impex/tiff/kis_dlg_options_tiff.cpp
M  +0    -3    plugins/impex/tiff/kis_dlg_options_tiff.h

http://commits.kde.org/krita/8fcb0dcab85b1fe3a2827ff74b50ad67d399caea