Do not crash after showing KisTIFFOptionsWidget

Neither of the two private variables was used or initiated, thus the
delete was always going to be a segfault.

BUG: 371788